# embedded-firmware-verification

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
core/include/: efv_ed25519.h  efv_manifest.h  efv_sha256.h
core/src/: efv_ed25519.c  efv_sha256.c  efv_tweetnacl_wrapper.c
core/test/: test_efv_sha256.c
core/tests/: test_efv_ed25519.c
examples/esp32-s3-secure-bootloader/: CMakeLists.txt  README.md
examples/esp32-s3-secure-bootloader/bootloader_components/firmware_verify/: CMakeLists.txt  efv_boot_verify.c
examples/esp32-s3-secure-bootloader/main/: CMakeLists.txt  main.c
examples/esp32-s3-secure-bootloader/tests/: create_esp32-s3_image.sh  data_tamper.sh  flash_esp32-s3_image.sh  meta_tamper.sh  ota_server_start.sh  ota_update_trigger.sh  private_key  public_key  sign_tamper.sh  tamper.sh  verify_esp32-s3_image.sh
ext/bss/: README.md  bss_utils.c  bss_utils.h
ext/tweetnacl/: README.md
tests/: test_image_flow.sh  test_signature_flow.sh
tools/: check_payload_hash.c  efv_image_verify.c  efv_signature_verify.c  sodium_image_create.c  sodium_keypair_create.c  sodium_payload_sign.c  sodium_signature_verify.c  tweetnacl_signature_verify.c
