set(EFV_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../..)

idf_component_register(
    SRCS
        "main.c"
        "wifi_station.c"
        "mqtt_client_app.c"
        "ota_http_client.c"
    INCLUDE_DIRS
        "${EFV_ROOT}/core/include"
         "."
    PRIV_REQUIRES
        nvs_flash
        esp_timer
        esp_driver_gpio
        esp_wifi
        esp_netif
        esp_http_server
        mqtt
        app_update
        esp_http_client
        esp_https_ota
)
